<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/city"
                        android:textSize="20dp"
                        android:shadowColor="@color/black"/>
                    <EditText
                        android:id="@+id/etCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/loan_city"
                        android:inputType="textPersonName"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/borrower"
                        android:textSize="20dp"
                        android:shadowColor="@color/black"/>
                    <EditText
                        android:id="@+id/etFullNameBorrower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/fullName"
                        android:inputType="textPersonName"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/lender"
                        android:textSize="20dp"
                        android:shadowColor="@color/black"/>
                    <EditText
                        android:id="@+id/etFullNameLender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/fullName"
                        android:inputType="textPersonName"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/loan_amount"
                        android:textSize="20dp"
                        android:shadowColor="@color/black"/>
                    <EditText
                        android:id="@+id/etAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/sum"
                        android:inputType="textPersonName"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/data_of_refund"
                        android:textSize="20dp"
                        android:shadowColor="@color/black"/>
                    <EditText
                        android:id="@+id/etDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/data"
                        android:inputType="date"/>
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/newButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>