<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightCyanide"
    tools:context=".AuthorizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="176dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_logo" />

        <EditText
            android:id="@+id/etInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/buttonAuthorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            />

        <TextView
            android:id="@+id/tvCreatePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>